--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 
 # testing
 /coverage
+/.idea
 
 # production
 /build
@@ -12,7 +13,7 @@
 # misc
 .DS_Store
 .env
-.idea 
+.idea
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
