--- a/package.json
+++ b/package.json
@@ -4,23 +4,31 @@
   "private": true,
   "dependencies": {
     "assert": "^1.4.1",
+    "bufferutil": "^3.0.1",
     "classnames": "^2.2.5",
     "express": "^4.15.3",
     "fastclick": "^1.0.6",
     "open": "^0.0.5",
+    "path": "^0.12.7",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "socket.io": "^2.0.1",
-    "socket.io-client": "^2.0.1"
+    "socket.io": "^2.0.2",
+    "socket.io-client": "^2.0.2",
+    "utf-8-validate": "^3.0.2"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "nodemon": "1.11.0",
     "react-scripts": "0.9.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "run": "react-scripts build && babel-node server.js",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "babel-node server.js"
+  },
+  "babel": {
+    "presets": ["es2015", "stage-2"]
   }
 }
