--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "classnames": "^2.2.5",
     "express": "^4.15.3",
     "fastclick": "^1.0.6",
+    "moniker": "^0.1.2",
     "open": "^0.0.5",
     "path": "^0.12.7",
     "prop-types": "^15.5.10",
@@ -29,6 +30,9 @@
     "start": "babel-node server.js"
   },
   "babel": {
-    "presets": ["es2015", "stage-2"]
+    "presets": [
+      "es2015",
+      "stage-2"
+    ]
   }
 }
