--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-router-dom": "^4.1.1",
     "socket.io": "^2.0.2",
     "socket.io-client": "^2.0.2",
     "utf-8-validate": "^3.0.2"
