--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "quantum_tic_tac_toe",
   "version": "0.1.0",
+  "engines": {
+  "node": "7.x"
+  },
   "private": true,
   "dependencies": {
     "assert": "^1.4.1",
