--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "material-ui": "^0.18.5",
     "moniker": "^0.1.2",
     "open": "^0.0.5",
+    "particles.js": "^2.0.0",
     "path": "^0.12.7",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
+    "react-dipper": "^0.1.3",
     "react-dom": "^15.5.4",
     "react-particles-js": "^1.5.0",
     "react-router-dom": "^4.1.1",
+    "react-tap-event-plugin": "^2.0.1",
     "sillyname": "^0.1.0",
     "socket.io": "^2.0.2",
     "socket.io-client": "^2.0.2",
